Name:                       orangeroster
Build-type:                 Simple
Version:                    0.1.0
Cabal-Version:              >= 1.2

flag ghc7

Executable simple-server
    Main-is:                simple-server.hs
    if flag(ghc7)
        build-depends:      base >= 4.3 && < 5
        cpp-options:        -DGHC7
    else
        build-depends:      base >= 4 && < 4.3
    Build-depends:          blaze-html >= 0.4 && < 0.5,
                            bytestring,
                            directory,
                            hamlet,
                            mime-mail,
                            monad-peel >= 0.1 && < 0.2,
                            persistent >= 0.4 && < 0.5,
                            persistent-sqlite >= 0.4 && < 0.5,
                            pureMD5,
                            safe,
                            template-haskell,
                            time,
                            utf8-string,
                            warp >= 0.3 && < 0.4,
                            yesod >= 0.7 && < 0.8,
                            yesod-auth >= 0.3 && < 0.4,
                            yesod-form <= 0.1,
                            yesod-static <= 0.1
    ghc-options:            -O0 -threaded -Wall -Werror
